# miscellaneous-js

./: .gitignore  README.md
communication/hello-webrtc/frontend/: package-lock.json
communication/hellonode-http2/: README.md  generate-cert.js  server.js
communication/hellonode-http2/certs/: certificate.pem  private-key.pem
communication/hellonode-http2/public/: index.html  style.css
database/hello-indexdb/: package.json
database/hello-indexdb/public/: index.html
database/hello-indexdb/src/: App.tsx
devops/: README.md
hello-indexdb/: README.md  package-lock.json
hello-indexdb/src/: App.css
hello-indexdb/src/services/: IndexedDBService.ts
hello-webrtc/backend/: server.js
hello-webrtc/frontend/: index.html  main.js  package.json
hello_expo_app/: app.json  package-lock.json  package.json
hello_react_native/: README.md  app.json  package-lock.json  package.json
hello_react_native/android/: settings.gradle
hello_react_native/android/app/: build.gradle
hello_react_native/ios/: Podfile
hello_react_native/ios/hello_react_native/: AppDelegate.mm  AppDelegate.swift  Info.plist
hello_react_native/ios/hello_react_native.xcodeproj/: project.pbxproj
hellogrpc/: package-lock.json
hellogrpc-node/src/: client.js
hellogrpc-react/: README.md  check-services.js  envoy.yaml
hellogrpc-react/backend/: package-lock.json  package.json  server.js
hellogrpc-react/frontend/: package-lock.json  package.json
hellogrpc-react/frontend/public/: index.html
hellogrpc-react/frontend/src/: App.tsx
hellogrpc-react/proto/: hello.proto
hellogrpc-web/: README.md  dev.md  docker-compose.yml  package-lock.json  package.json
hellogrpc-web-cpp/: README.md  docker-compose.yml  envoy.yaml
hellogrpc-web-cpp/client/: package.json  webpack.config.js
hellogrpc-web-cpp/client/src/: client.js
hellogrpc-web-cpp/proto/: greeter.proto
hellogrpc-web-cpp/server/src/: server.cpp
hellogrpc-web/proto/: greeter.proto
hellogrpc-web/src/client/: client.js
hellogrpc-web/src/server/: server.js
hellogrpc/src/: client.js  server.js
hellonode-http2/: client.js  package-lock.json  package.json
hellonode-http2/certs/: certificate.pem  private-key.pem
hellonode-http2/public/: script.js
helloprobuffer/: addressbook.json  addressbook.pb  index.js  package-lock.json  package.json
helloprobuffer/proto/: message.proto
helloprobuffer/src/: encode.js
helloproto-fromjson/: package.json  tsconfig.json
helloproto-fromjson/proto/: user.proto
helloproto-fromjson/src/: index.ts
helloproto-fromjson/web/: package-lock.json
helloproto-fromjson/web/public/: index.html
helloproto-fromjson/web/src/: App.css  App.tsx  index.css
helloproto-react/: package-lock.json  package.json
helloproto-react/src/: App.tsx
helloproto-react/src/proto/: user.proto
helloproto-ts-web/: package-lock.json  package.json
helloproto-ts-web/src/: App.css  App.tsx
helloproto-ts-web/src/proto/: user.proto
middleware/hellogrpc-node/: README.md  package.json
middleware/hellogrpc-web/: Dockerfile  envoy.yaml  webpack.config.js
middleware/hellogrpc-web-cpp/server/: CMakeLists.txt
middleware/helloprobuffer/: README.md
middleware/helloproto-fromjson/: package-lock.json
middleware/helloproto-ts-web/: README.md  package-lock.json  package.json
mobile/hello-expo-app/: app.json  package-lock.json  package.json
mobile/hello_react_native/: package.json
(+27 files in other folders)
